# FHIRWorks

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/: FHIRServer.py  app.py
backend/templates/: home.html
sample_requests/: appointment.json
